@@ -1,12 +1,7 @@
 {
-  "count": 113,
+  "count": 112,
   "uniques": 53,
   "clones": [
-    {
-      "timestamp": "2025-06-25T00:00:00Z",
-      "count": 4,
-      "uniques": 3
-    },
     {
       "timestamp": "2025-06-26T00:00:00Z",
       "count": 8,
@@ -71,6 +66,11 @@
       "timestamp": "2025-07-08T00:00:00Z",
       "count": 7,
       "uniques": 4
+    },
+    {
+      "timestamp": "2025-07-09T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
